# qutip-bundling

./: .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  CONVENTIONS.md  LICENSE  MANIFEST.in  PUBLISHING.md  README.md  pyproject.toml
.github/workflows/: test.yml
benchmarks/: BENCHMARKS.md  benchmark_convergence.py  benchmark_cost_scaling.py  benchmark_jackknife.py  benchmark_scaling.py  benchmark_seed_robustness.py  benchmark_substep_convergence.py  benchmark_vs_mcsolve.py  system_a_schematic.py  system_b_schematic.py
examples/: oscillator_demo.py  tutorial.ipynb
src/qutip_bundling/: __init__.py  _spectral.py  native_solver.py  operators.py  solvers.py
tests/: test_bundling.py  test_native_instability.py
