[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "qutip-bundling"
dynamic = ["version"]
description = "Stochastic bundling of Lindblad operators for QuTiP"
readme = "README.md"
requires-python = ">=3.10"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
authors = [
    { name = "Sayak Adhikari", email = "sayak.adhikari@mail.huji.ac.il" },
    { name = "Roi Baer", email = "roi.baer@gmail.com" },
]
keywords = [
    "quantum",
    "open quantum systems",
    "lindblad",
    "master equation",
    "qutip",
    "stochastic",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy>=1.22",
    "qutip>=5.0",
]

[project.optional-dependencies]
examples = ["matplotlib>=3.5"]
test = ["pytest>=7.0"]

[project.urls]
"Homepage" = "https://github.com/Sayak183/qutip-bundling"
"Repository" = "https://github.com/Sayak183/qutip-bundling"
"Method paper" = "https://doi.org/10.1021/acs.jctc.5c00145"

[tool.setuptools.dynamic]
version = { attr = "qutip_bundling.__version__" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
